--- a/css/index.css
+++ b/css/index.css
@@ -1562,3 +1562,33 @@ tr{
     }
 }
 
+#countdown {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#countdown ul {
+    display: inline-flex;
+    list-style: none;
+}
+#countdown ul li {
+    display: inline-block;
+    font-size: 1.5rem;
+  list-style-type: none;
+  padding: 0.4em;
+  text-transform: uppercase;
+}
+#countdown ul li span {
+    font-size: 2rem;
+    padding-right: 5px;
+    background: #0b2c74;
+    padding-left: 5px;
+    margin-right: 5px;
+    color: white;
+}
+.tp_txt p{
+    font-family: 'GemunuLibre' !important;
+    text-transform: uppercase;
+    font-size: 21px;
+    letter-spacing: 2px;
+}
